Join stream bug and stream cleanup (#258)
* feat: added better flow for studio

* fix: added todo comment

* fix: live chatbox

* fix: comment local relay

* fix: added message refresh

* fix: live cleanup, added cloudfare storage and fix joining strean issue

* fix: comflict

--- a/apps/data-backend/.env.example
+++ b/apps/data-backend/.env.example
@@ -29,6 +29,14 @@ RPC_NODE_API_KEY=""
 SN_NETWORK="SN_SEPOLIA"
 
 
+# Cloudfare
+CLOUDFARE_ACCOUNT_ID=""
+CLOUDFARE_AUTH_TOKEN=""
+CLOUDFARE_R2_BUCKET=""
+CLOUDFARE_R2_ACCESS=""
+CLOUDFARE_R2_SECRET=""
+CLOUDFARE_R2_DOMAIN=""
+
 TWITTER_API_KEY=""
 TWITTER_API_SECRET_KEY=""
 TWITTER_CALLBACK_URL="TWITTER_CALLBACK_URL"
