--- a/apps/mobile/.env.example
+++ b/apps/mobile/.env.example
@@ -43,3 +43,6 @@ EXPO_PUBLIC_PINATA_UPLOAD_URL='https://uploads.pinata.cloud/v3/files'
 
 EXPO_PUBLIC_APP_ID_ONRAMP_MONEY=
 
+#CLOUDFARE 
+EXPO_PUBLIC_CLOUDFARE_BUCKET_URL=""
+
