--- a/apps/data-backend/package.json
+++ b/apps/data-backend/package.json
@@ -24,6 +24,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.693.0",
+    "@aws-sdk/lib-storage": "^3.693.0",
     "@fastify/cors": "^10.0.1",
     "@fastify/oauth2": "8.1.0",
     "@fastify/session": "^11.0.1",
