--- a/Dockerfile.data-backend.railway
+++ b/Dockerfile.data-backend.railway
@@ -117,7 +117,10 @@ RUN pnpm install --force
 RUN pnpm --filter indexer-prisma build
 
 # Build the data-backend package
-RUN pnpm --filter data-backend build:all
+# RUN pnpm --filter data-backend build:all
+RUN pnpm --filter data-backend build:all_repo
+
+
 
 # Use a smaller production base image
 FROM node:18-alpine AS production
