--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build:indexer-prisma":"cd packages/indexer-prisma && pnpm run build",
     "build:prisma-db":"cd packages/prisma-db && pnpm pull && pnpm generate",
     "build:backend":"cd apps/data-backend && pnpm run build",
-    "build:backend:all":"pnpm run build:indexer-prisma && cd apps/data-backend && pnpm install && pnpm run build",
+    "build:backend:all":"pnpm run build:indexer-prisma && pnpm run build:prisma-db && cd apps/data-backend && pnpm install && pnpm run build:all",
     "run:backend":"cd apps/data-backend && pnpm run start",
     "run:backend:prod":"cd apps/data-backend && pnpm run start:prod",
     "dev": "turbo run dev",
