hotfix indexer docker and constants

--- a/apps/indexer/Dockerfile
+++ b/apps/indexer/Dockerfile
@@ -44,4 +44,10 @@ ARG PGOPTIONS
 
 ENV PGOPTIONS=${PGOPTIONS}
 
+ARG LAUNCHPAD_ADDRESS
+ENV LAUNCHPAD_ADDRESS=${LAUNCHPAD_ADDRESS}
+
+ARG ENV_STREAM_URL
+ENV ENV_STREAM_URL=${ENV_STREAM_URL}
+
 ENTRYPOINT ["/nix/store/rh1g8pb7wfnyr527jfmkkc5lm3sa1f0l-apibara-sink-postgres-0.7.0/bin/apibara-sink-postgres"]
