--- a/apps/data-backend/.env.example
+++ b/apps/data-backend/.env.example
@@ -41,7 +41,7 @@ CLOUDFARE_R2_DOMAIN=""
 
 TWITTER_API_KEY=""
 TWITTER_API_SECRET_KEY=""
-TWITTER_CALLBACK_URL="TWITTER_CALLBACK_URL"
+TWITTER_CALLBACK_URL="http://localhost:8081/app/SocialPayment"
 
 TWITTER_CLIENT_ID=""
 TWITTER_CLIENT_SECRET=""
