--- a/apps/mobile/.env.example
+++ b/apps/mobile/.env.example
@@ -1,7 +1,7 @@
 EXPO_PUBLIC_NETWORK="SN_SEPOLIA"  # SN_SEPOLIA, SN_MAIN
 EXPO_PUBLIC_PROVIDER_URL="https://starknet-sepolia.g.alchemy.com/starknet/version/rpc/v0_7/your_api_key"
 
-EXPO_PUBLIC_BACKEND_URL="http://localhost:3000/api"
+EXPO_PUBLIC_BACKEND_URL="https://afk-monorepo.onrender.com/"
 
 EXPO_PUBLIC_WC_ID=""
 EXPO_NODE_ENV="development"
