reverted package.json

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -29,7 +29,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.24.8",
-    "@cashu/cashu-ts": "^1.0.1",
+    "@cashu/cashu-ts": "^2.0.0",
     "@docusaurus/core": "^3.5.2",
     "@docusaurus/preset-classic": "^3.5.2",
     "@dynamic-labs/client": "4.0.0-alpha.8",
@@ -57,7 +57,7 @@
     "@reown/appkit-siwe-react-native": "1.0.1",
     "@reown/appkit-wagmi-react-native": "1.0.1",
     "@starknet-react/chains": "^3.1.0",
-    "@starknet-react/core": "^3.6.0",
+    "@starknet-react/core": "^3.5.0",
     "@starknet-react/kakarot": "^3.0.9",
     "@starknet-wc/core": "0.0.4",
     "@starknet-wc/react": "0.0.4",
@@ -96,11 +96,11 @@
     "fast-text-encoding": "^1.0.6",
     "formik": "^2.4.6",
     "get-starknet-core": "^3.3.0",
+    "hls.js": "^1.5.17",
     "install": "^0.13.0",
     "jsqr": "^1.4.0",
     "memoize-one": "^6.0.0",
     "metro-react-native-babel-preset": "^0.77.0",
-    "mobile": "link:",
     "npx": "^10.2.2",
     "path": "^0.12.7",
     "pbkdf2": "^3.1.2",
