--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,7 @@ pnpm-lock.yaml
 .vercel
 
 onchain/cairo/.snfoundry_cache/https___starknet_mainnet_public_blastapi_io_rpc_v0_7_615925_v3.json
+onchain/cairo/.snfoundry_cache/https___starknet_sepolia_public_blastapi_io_rpc_v0_7_505925_v3.json
+onchain/cairo/.snfoundry_cache/https___starknet_sepolia_public_blastapi_io_rpc_v0_7_615925_v3.json
+
+
