--- a/onchain/cairo/Scarb.toml
+++ b/onchain/cairo/Scarb.toml
@@ -31,3 +31,8 @@ allowed-libfuncs-list.name = "experimental"
 name = "Mainnet"
 url = "https://starknet-mainnet.public.blastapi.io/rpc/v0_7"
 block_id.number = "615925"
+
+[[tool.snforge.fork]]
+name = "Sepolia"
+url = "https://starknet-sepolia.public.blastapi.io/rpc/v0_7"
+block_id.number = "615925"
