--- a/apps/indexer/docker-compose.yml
+++ b/apps/indexer/docker-compose.yml
@@ -113,6 +113,19 @@ services:
       - backend
     restart: on-failure
 
+  nameservice-indexer:
+    environment:
+      - AUTH_TOKEN=${AUTH_TOKEN}
+      - POSTGRES_CONNECTION_STRING=postgresql://admin:postgres@postgres:5432/indexer
+    image: quay.io/apibara/sink-postgres:latest
+    command: 'run ./indexer/nameservice.ts --allow-env-from-env AUTH_TOKEN,POSTGRES_CONNECTION_STRING,LAUNCHPAD_ADDRESS,ENV_STREAM_URL -A ${AUTH_TOKEN}'
+    volumes:
+      - ./src:/indexer
+    depends_on:
+      - postgres
+    networks:
+      - backend
+    restart: on-failure
 
 
 networks:
