fix: expo compatibility (#275)

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -53,9 +53,9 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
-    "@reown/appkit-auth-wagmi-react-native": "1.0.1",
-    "@reown/appkit-siwe-react-native": "1.0.1",
-    "@reown/appkit-wagmi-react-native": "1.0.1",
+    "@reown/appkit-auth-wagmi-react-native": "~1.0.1",
+    "@reown/appkit-siwe-react-native": "~1.0.1",
+    "@reown/appkit-wagmi-react-native": "~1.0.1",
     "@starknet-react/chains": "^3.1.0",
     "@starknet-react/core": "^3.5.0",
     "@starknet-react/kakarot": "^3.0.9",
@@ -124,7 +124,6 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-vision-camera": "^4.5.3",
     "react-native-web": "~0.19.6",
-    "react-native-webrtc": "^124.0.4",
     "react-native-webview": "~13.6.4",
     "react-native-webview-crypto": "^0.0.25",
     "starknet": "6.11.0",
