fix: add indexer database url

--- a/Dockerfile.indexer.railway
+++ b/Dockerfile.indexer.railway
@@ -5,6 +5,7 @@ FROM node:20-alpine AS base
 WORKDIR /app
 
 ARG DATABASE_URL
+ARG INDEXER_DATABASE_URL
 ARG APP_ENV
 ARG APP_PORT
 ARG NETWORK
@@ -12,6 +13,7 @@ ARG DNA_TOKEN
 ARG DNA_CLIENT_URL
 
 RUN echo ${DATABASE_URL}
+RUN echo ${INDEXER_DATABASE_URL}
 RUN echo ${APP_ENV}
 RUN echo ${APP_PORT}
 RUN echo ${TELEGRAM_WEB_APP}
