start refaco locker and unrug

--- a/apps/nestjs-indexer/.env.sample
+++ b/apps/nestjs-indexer/.env.sample
@@ -1,4 +1,5 @@
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/indexer"
+INDEXER_DATABASE_URL="postgresql://postgres:postgres@localhost:5432/indexer"
 
 # Environment
 APP_ENV="development"
