--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -14,4 +14,4 @@ jobs:
         with:
           go-version: '1.22.0'
       - name: Build
-        run: go mod download && go build
+        run: go mod download && go build -o main ./cmd/backend/backend.go
