--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -15,3 +15,4 @@ jobs:
           go-version: '1.22.0'
       - name: Build
         run: go mod download && go build -o main ./cmd/backend/backend.go
+        working-directory: backend
