--- a/.github/workflows/starknet-contracts.yml
+++ b/.github/workflows/starknet-contracts.yml
@@ -1,6 +1,14 @@
 name: Starknet Contracts
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+    paths:
+      - "onchain/cairo/**"
+  pull_request:
+    paths:
+      - "onchain/cairo/**"
 
 permissions: read-all
 
