fix: data backend formatting

--- a/apps/data-backend/package.json
+++ b/apps/data-backend/package.json
@@ -16,8 +16,8 @@
     "prisma:generate": "npx prisma generate",
     "prisma:push": "npx prisma db push",
     "prisma:setup": "npx prisma generate && npx prisma db pull",
-    "prettier": "prettier --write \"src/**/*.{ts,tsx}\"",
-    "prettier:check": "prettier --check \"src/**/*.{ts,tsx}\"",
+    "format": "prettier --write \"src/**/*.{ts,tsx}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx}\"",
     "ts:check": "tsc --noEmit"
   },
   "keywords": [],
