fix: pwa formatting

--- a/.github/workflows/pwa.yml
+++ b/.github/workflows/pwa.yml
@@ -53,7 +53,7 @@ jobs:
           fi
 
       - name: Prettier Format Check
-        run: pnpm prettier:check
+        run: pnpm format:check
       
       - name: Lint
         run: pnpm lint
