--- a/.github/workflows/starknet-contracts.yml
+++ b/.github/workflows/starknet-contracts.yml
@@ -19,10 +19,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: software-mansion/setup-scarb@v1
         with:
-          scarb-version: '2.8.4'
-      - name: Scarb version
-        run: scarb --version
-        working-directory: onchain/cairo/afk
+          tool-versions: onchain/cairo/afk/.tool-versions
+          scarb-lock: onchain/cairo/afk/scarb.lock
       - name: Check cairo format
         run: scarb fmt --check
         working-directory: onchain/cairo/afk
@@ -31,7 +29,7 @@ jobs:
         working-directory: onchain/cairo/afk
       - uses: foundry-rs/setup-snfoundry@v3
         with:
-          starknet-foundry-version: '0.30.0'
+          tool-versions: onchain/cairo/afk/.tool-versions
       - name: Run cairo tests
         run: snforge test
         working-directory: onchain/cairo/afk
@@ -41,10 +39,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: software-mansion/setup-scarb@v1
         with:
-          scarb-version: '2.8.4'
-      - name: Scarb version
-        run: scarb --version
-        working-directory: onchain/cairo/launchpad
+          tool-versions: onchain/cairo/launchpad/.tool-versions
+          scarb-lock: onchain/cairo/launchpad/scarb.lock
       - name: Check cairo format
         run: scarb fmt --check
         working-directory: onchain/cairo/launchpad
@@ -53,7 +49,7 @@ jobs:
         working-directory: onchain/cairo/launchpad
       - uses: foundry-rs/setup-snfoundry@v3
         with:
-          starknet-foundry-version: '0.30.0'
+          tool-versions: onchain/cairo/launchpad/.tool-versions
       - name: Run cairo tests
         run: snforge test
         working-directory: onchain/cairo/launchpad
