--- a/scripts/package.json
+++ b/scripts/package.json
@@ -15,6 +15,7 @@
     "deploy:art_peace": "ts-node ./deploy/art_peace.ts",
     "deploy:username_store": "ts-node ./deploy/username_store.ts",
     "deploy:nameservice": "ts-node ./deploy/nameservice.ts",
+    "get_hash": "ts-node ./run/utils/get_hash.ts",
     "dev": "ts-node index.ts",
     "relay": "ts-node src/index.ts",
     "relay:dev": "nodemon --ext *"
