script chain action and init others needed for pixel + repo

--- a/scripts/package.json
+++ b/scripts/package.json
@@ -12,9 +12,11 @@
     "deploy:launchpad": "ts-node ./deploy/launchpad.ts",
     "deploy:token": "ts-node ./deploy/token.ts",
     "deploy:memecoin": "ts-node ./deploy/memecoin.ts",
-    "deploy:art_peace": "ts-node ./deploy/art_peace.ts",
     "deploy:username_store": "ts-node ./deploy/username_store.ts",
     "deploy:nameservice": "ts-node ./deploy/nameservice.ts",
+    "deploy:art_peace": "ts-node ./deploy/pixel/art_peace.ts",
+    "deploy:canvas_nft": "ts-node ./deploy/pixel/canvas_nft.ts",
+    "deploy:chain_faction": "ts-node ./run/pixel/create_all_chain_faction.ts",
     "get_hash": "ts-node ./run/utils/get_hash.ts",
     "dev": "ts-node index.ts",
     "relay": "ts-node src/index.ts",
