--- a/packages/indexer-prisma/package.json
+++ b/packages/indexer-prisma/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx prisma generate && npx prisma db push && tsc",
+    "build": "npx prisma generate && npx prisma db pull && tsc",
+    "build:push": "npx prisma generate && npx prisma db push && tsc",
     "generate":"npx prisma generate",
     "pull":"npx prisma db pull",
     "push":"npx prisma db push" ,
