--- a/.gitignore
+++ b/.gitignore
@@ -31,5 +31,5 @@ onchain/cairo/afk/.snfoundry_cache/https___starknet_mainnet_public_blastapi_io_r
 onchain/cairo/launchpad/.snfoundry_cache/https___starknet_sepolia_public_blastapi_io_rpc_v0_7_505925_v3.json
 onchain/cairo/afk/.snfoundry_cache/https___starknet_sepolia_public_blastapi_io_rpc_v0_7_615925_v3.json
 onchain/cairo/launchpad/.snfoundry_cache/https___starknet_sepolia_public_blastapi_io_rpc_v0_7_615925_v3.json
-
-onchain/cairo/launchpad/.snfoundry_cache/https___starknet_mainnet_public_blastapi_io_rpc_v0_7_615925_v3
+onchain/cairo/launchpad/.snfoundry_cache/https___starknet_mainnet_public_blastapi_io_rpc_v0_7_615925_v3.json
+onchain\cairo\launchpad\.snfoundry_cache\https___starknet_mainnet_public_blastapi_io_rpc_v0_7_615925_v3.json
