Feat/prep od (#344)
* fix pull db in backend

* fix test value and scarb fmt

--- a/.gitignore
+++ b/.gitignore
@@ -27,8 +27,9 @@ node_modules/
 pnpm-lock.yaml
 .vercel
 
-onchain/cairo/.snfoundry_cache/https___starknet_mainnet_public_blastapi_io_rpc_v0_7_615925_v3.json
-onchain/cairo/.snfoundry_cache/https___starknet_sepolia_public_blastapi_io_rpc_v0_7_505925_v3.json
-onchain/cairo/.snfoundry_cache/https___starknet_sepolia_public_blastapi_io_rpc_v0_7_615925_v3.json
-
-
+onchain/cairo/afk/.snfoundry_cache/https___starknet_mainnet_public_blastapi_io_rpc_v0_7_615925_v3.json
+onchain/cairo/launchpad/.snfoundry_cache/https___starknet_sepolia_public_blastapi_io_rpc_v0_7_505925_v3.json
+onchain/cairo/afk/.snfoundry_cache/https___starknet_sepolia_public_blastapi_io_rpc_v0_7_615925_v3.json
+onchain/cairo/launchpad/.snfoundry_cache/https___starknet_sepolia_public_blastapi_io_rpc_v0_7_615925_v3.json
+onchain/cairo/launchpad/.snfoundry_cache/https___starknet_mainnet_public_blastapi_io_rpc_v0_7_615925_v3.json
+onchain\cairo\launchpad\.snfoundry_cache\https___starknet_mainnet_public_blastapi_io_rpc_v0_7_615925_v3.json
