--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "build:backend":"cd apps/data-backend && pnpm run build",
     "build:backend:all":"pnpm run build:indexer-prisma && pnpm run build:prisma-db && cd apps/data-backend && pnpm install && pnpm run build:all",
     "run:backend":"cd apps/data-backend && pnpm run start",
+    "build:backend:prisma":"cd apps/data-backend && pnpm run prisma:setup",
     "run:backend:prod":"cd apps/data-backend && pnpm run start:prod",
     "build:nestjs-indexer": "cd apps/nestjs-indexer && pnpm run build",
     "dev": "turbo run dev",
