--- a/packages/indexer-prisma/package.json
+++ b/packages/indexer-prisma/package.json
@@ -2,7 +2,7 @@
   "name": "indexer-prisma",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "types": "src/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
