--- a/packages/indexer-prisma/package.json
+++ b/packages/indexer-prisma/package.json
@@ -2,8 +2,8 @@
   "name": "indexer-prisma",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.ts",
-  "types": "src/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx prisma generate && npx prisma db pull && tsc",
