--- a/packages/indexer-prisma/tsconfig.json
+++ b/packages/indexer-prisma/tsconfig.json
@@ -6,6 +6,8 @@
     "lib": ["dom", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
+    "declaration": true,
+    "declarationMap": true,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "strict": true,
