--- a/packages/indexer-prisma/tsconfig.json
+++ b/packages/indexer-prisma/tsconfig.json
@@ -8,6 +8,7 @@
     "skipLibCheck": true,
     "declaration": true,
     "declarationMap": true,
+    "sourceMap": true,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "strict": true,
