--- a/apps/data-backend/package.json
+++ b/apps/data-backend/package.json
@@ -37,6 +37,7 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
+    "data-backend": "link:",
     "dotenv": "^16.4.5",
     "fastify": "^5.1.0",
     "fastify-plugin": "^5.0.1",
