Feat/fix edge case (#351)
* check launch issues sub overflow + docker file open ssl backend

* change index.ts import and dist used in package

* delete types package json

* use src path not dist

* use ts src main

* import prisma differently

* readd old import

* use dist and change js to ts

* declaration map

* source map

* new version indexer tsconfig

* undo types

* export types from prisma

* add export *

* try indexer prisma last build because two prisma in nodemodule

--- a/packages/indexer-prisma/tsconfig.json
+++ b/packages/indexer-prisma/tsconfig.json
@@ -1,17 +1,15 @@
 {
   "compilerOptions": {
-    "outDir": "./dist",  // Output directory for compiled JS files
-    "module": "CommonJS",  // Use CommonJS for Node.js compatibility
-    "target": "ESNext",
-    "lib": ["dom", "esnext"],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
+    "target": "es2020",
+    "module": "commonjs",
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
+    "outDir": "./dist",
     "strict": true,
     "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
   },
   "exclude": ["node_modules", "dist"],
   "include": ["src/**/*", "**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx"]
