start change const and new deploy

--- a/turbo.json
+++ b/turbo.json
@@ -47,6 +47,14 @@
     "NEXT_PUBLIC_DYNAMIC_API_KEY",
     "NEXT_PUBLIC_DYNAMIC_ENV_ID",
     "NEXT_PUBLIC_ACCOUNT_ADDRESS",
+    "NEXT_PUBLIC_STARKNET_CONTRACT_ADDRESS",
+    "NEXT_PUBLIC_CANVAS_NFT_CONTRACT_ADDRESS",
+    "NEXT_PUBLIC_USERNAME_STORE_CONTRACT_ADDRESS",
+    "NEXT_PUBLIC_ART_PEACE_CONTRACT_ADDRESS",
+    "EXPO_PUBLIC_STARKNET_CONTRACT_ADDRESS",
+    "EXPO_PUBLIC_CANVAS_NFT_CONTRACT_ADDRESS",
+    "EXPO_PUBLIC_USERNAME_STORE_CONTRACT_ADDRESS",
+    "EXPO_PUBLIC_ART_PEACE_CONTRACT_ADDRESS",
     "BACKEND_DATABASE_URL",
     "CLOUDINARY_CLOUD_NAME",
     "CLOUDINARY_API_KEY",
