--- a/apps/pwa/package.json
+++ b/apps/pwa/package.json
@@ -43,6 +43,7 @@
     "next": "^14.2.3",
     "nostr-tools": "^2.7.0",
     "pixel_ui": "workspace:*",
+    "pwa": "link:",
     "qs": "^6.12.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
