workflow pre lint fix

--- a/.github/workflows/pwa.yml
+++ b/.github/workflows/pwa.yml
@@ -58,6 +58,9 @@ jobs:
       - name: Lint
         run: pnpm lint
 
+      - name: Lint fix
+      run: pnpm lint:fix
+
       - name: TypeScript Check
         run: pnpm ts:check
 
