--- a/apps/pwa/package.json
+++ b/apps/pwa/package.json
@@ -12,7 +12,9 @@
     "lint:fix": "next lint --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx}\"",
-    "ts:check": "tsc --noEmit"
+    "ts:check": "tsc --noEmit",
+    "validate": "pnpm run lint:fix && pnpm run build",
+    "safe-build": "pnpm run build || echo 'Build failed but continuing...'"
   },
   "dependencies": {
     "@argent/tma-wallet": "^1.17.0",
