--- a/Dockerfile.indexer.railway
+++ b/Dockerfile.indexer.railway
@@ -30,6 +30,8 @@ RUN npm install -g pnpm
 # Copy the entire repository into the Docker container
 COPY . .
 
+RUN apk add --no-cache openssl
+
 # Install all dependencies for the workspace
 RUN pnpm install --force
 
