--- a/.github/workflows/pwa.yml
+++ b/.github/workflows/pwa.yml
@@ -54,6 +54,9 @@ jobs:
 
       - name: Prettier Format Check
         run: pnpm format:check
+        
+      - name: Lint fix
+        run: pnpm lint:fix
       
       - name: Lint
         run: pnpm lint
