--- a/apps/pwa/package.json
+++ b/apps/pwa/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "https": "next dev --experimental-https",
     "start": "next start",
     "build:app": "pnpm run build:nostr_sdk && next build",
     "build": "next build",
@@ -35,6 +36,7 @@
     "@starknet-wc/core": "0.0.4",
     "@starknet-wc/react": "0.0.4",
     "@tanstack/react-query": "^5.40.0",
+    "@twa-dev/sdk": "^8.0.1",
     "axios": "^1.7.2",
     "common": "workspace:*",
     "d3": "^7.9.0",
