--- a/.github/workflows/data-backend.yml
+++ b/.github/workflows/data-backend.yml
@@ -1,14 +1,6 @@
 name: Data Backend App
 
-on:
-  push:
-    branches:
-      - main
-    paths:
-      - "apps/data-backend/**"
-  pull_request:
-    paths:
-      - "apps/data-backend/**"
+on: [push, pull_request]
 
 jobs:
   check-app:
@@ -25,7 +17,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20.x"
+          node-version: '20.x'
 
       - name: Install pnpm
         uses: pnpm/action-setup@v4
@@ -46,7 +38,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          if [ -f "apps/data-backend/pnpm-lock.yaml" ]; then
+          if [ -f "pnpm-lock.yaml" ]; then
             pnpm install --frozen-lockfile
           else
             pnpm install
