--- a/packages/prisma-db/package.json
+++ b/packages/prisma-db/package.json
@@ -2,8 +2,7 @@
   "name": "prisma-db",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
-  "types": "src/index.d.ts",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx prisma generate && npx prisma db pull && tsc",
