fix prisma db duplicate

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "build:indexer-prisma": "cd packages/indexer-prisma && pnpm run build",
     "build:prisma-db": "cd packages/prisma-db && pnpm pull && pnpm generate",
     "build:backend": "cd apps/data-backend && pnpm run build",
-    "build:backend:all": "pnpm run build:prisma-db && pnpm run build:indexer-prisma && cd apps/data-backend && pnpm install && pnpm run build:all",
+    "build:backend:all": "pnpm run build:indexer-prisma && cd apps/data-backend && pnpm install && pnpm run build:all",
+    "build:backend:all_repo": "pnpm run build:prisma-db && pnpm run build:indexer-prisma && cd apps/data-backend && pnpm install && pnpm run build:all",
     "run:backend": "cd apps/data-backend && pnpm run start",
     "build:backend:prisma": "cd apps/data-backend && pnpm run prisma:setup",
     "run:backend:prod": "cd apps/data-backend && pnpm run start:prod",
