--- a/Dockerfile.data-backend.railway
+++ b/Dockerfile.data-backend.railway
@@ -115,10 +115,10 @@ RUN apk add --no-cache openssl
 # Install all dependencies for the workspace, including common and data-backend
 RUN pnpm install --force
 
-RUN pnpm run build:prisma-db
+# RUN pnpm run build:prisma-db
 RUN pnpm run build:backend:prisma
 RUN pnpm run build:indexer-prisma
-RUN pnpm run build:backend:all
+# RUN pnpm run build:backend:all_repo
 # Build the indexer-prisma package
 RUN pnpm --filter indexer-prisma build
 
