--- a/Dockerfile.data-backend.railway
+++ b/Dockerfile.data-backend.railway
@@ -124,7 +124,7 @@ RUN pnpm --filter indexer-prisma build
 
 # Build the data-backend package
 # Build indexer-prisma and owned prisma
-RUN pnpm --filter data-backend build:all_repo
+# RUN pnpm --filter data-backend build:all_repo
 # Build data-backend
 RUN pnpm --filter data-backend build:all 
 # RUN pnpm --filter data-backend build
