fix openssl version and lib in specifc dist maybr to change

--- a/Dockerfile.indexer.railway
+++ b/Dockerfile.indexer.railway
@@ -23,8 +23,7 @@ RUN echo ${DNA_CLIENT_URL}
 
 RUN apk add --no-cache \
     openssl \
-    libc6-compat \
-    openssl1.1
+    libc6-compat 
     # openssl1.1-compat
 
 # Copy root-level package files
@@ -55,8 +54,7 @@ FROM node:20-alpine AS production
 # Install necessary dependencies in production
 RUN apk add --no-cache \
     openssl \
-    libc6-compat \
-    openssl1.1
+    libc6-compat 
 
 # Set the working directory in the production container
 WORKDIR /app
