--- a/Dockerfile.indexer.railway
+++ b/Dockerfile.indexer.railway
@@ -21,6 +21,11 @@ RUN echo ${NETWORK}
 RUN echo ${DNA_TOKEN}
 RUN echo ${DNA_CLIENT_URL}
 
+RUN apk add --no-cache \
+    openssl \
+    libc6-compat 
+    # openssl1.1-compat
+
 # Copy root-level package files
 COPY package.json pnpm-workspace.yaml ./
 
@@ -45,6 +50,11 @@ RUN pnpm --filter nestjs-indexer build
 
 # Use a smaller production base image
 FROM node:20-alpine AS production
+
+# Install necessary dependencies in production
+RUN apk add --no-cache \
+    openssl \
+    libc6-compat 
 
 # Set the working directory in the production container
 WORKDIR /app
