--- a/Dockerfile.data-backend.railway
+++ b/Dockerfile.data-backend.railway
@@ -127,6 +127,7 @@ RUN pnpm --filter indexer-prisma build
 # RUN pnpm --filter data-backend build:all_repo
 # Build data-backend
 # RUN pnpm --filter data-backend build:all 
+RUN pnpm --filter data-backend build:prisma
 RUN pnpm --filter data-backend build
 
 # Use a smaller production base image
