feat: refactor hook to sdk and replace old hooks with sdk ones

--- a/packages/afk_react_sdk/package.json
+++ b/packages/afk_react_sdk/package.json
@@ -22,7 +22,8 @@
     "tsup": "^8.0.2",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
-    "starknet": "^6.6.6"
+    "starknet": "^6.6.6",
+    "common": "workspace:*"
   },
   "devDependencies": {
     "starknet": "^6.6.6",
