--- a/Dockerfile.data-backend.railway
+++ b/Dockerfile.data-backend.railway
@@ -125,8 +125,8 @@ RUN pnpm --filter indexer-prisma build
 # Build the data-backend package
 # Build indexer-prisma and owned prisma
 # RUN pnpm --filter data-backend build:all_repo
-# Build data-backend
 # RUN pnpm --filter data-backend build:all 
+RUN pnpm --filter data-backend build:prisma
 RUN pnpm --filter data-backend build
 
 # Use a smaller production base image
