--- a/apps/mobile/tsconfig.json
+++ b/apps/mobile/tsconfig.json
@@ -28,6 +28,8 @@
       "afk_nostr_sdk": ["../../packages/afk_nostr_sdk/src"],
       "common": ["../../packages/common/src"],
       "pixel_ui": ["../../packages/pixel_ui/src"],
+      "afk_sdk":["../../packages/afk_sdk/src"],
+      "afk_react_sdk":["../../packages/afk_react_sdk/src"]
     },
   },
   "exclude": ["node_modules", "dist", "babel.config.js", "metro.config.js", "jest.config.js"],
