--- a/scripts/package.json
+++ b/scripts/package.json
@@ -10,6 +10,7 @@
     "deploy:key": "ts-node ./deploy/key.ts",
     "deploy:namespace": "ts-node ./deploy/namespace.ts",
     "deploy:launchpad": "ts-node ./deploy/launchpad.ts",
+    "deploy:unrug_liquidity": "ts-node ./deploy/unrug_liquidity.ts",
     "deploy:token": "ts-node ./deploy/token.ts",
     "deploy:memecoin": "ts-node ./deploy/memecoin.ts",
     "deploy:username_store": "ts-node ./deploy/username_store.ts",
