Feat/mvp beta soon please (#383)
* start launch token bonding curve selection and test + changes

* clean and fix script

* try deploy launch

* deploy new launch contract

* fixing few things

* start add enum for launch token bonding type

* issue docker still here, not generated prisma

* start change hooks launchpad and ui

--- a/Dockerfile.data-backend.railway
+++ b/Dockerfile.data-backend.railway
@@ -123,11 +123,10 @@ RUN pnpm run build:indexer-prisma
 RUN pnpm --filter indexer-prisma build
 
 # Build the data-backend package
-# Build indexer-prisma and owned prisma
 # RUN pnpm --filter data-backend build:all_repo
 # RUN pnpm --filter data-backend build:all 
-RUN pnpm --filter data-backend build:prisma
-RUN pnpm --filter data-backend build
+# RUN pnpm --filter data-backend build:prisma
+# RUN pnpm --filter data-backend build
 
 # Use a smaller production base image
 FROM node:20-alpine AS production
